--- a/src/index.css
+++ b/src/index.css
@@ -6,8 +6,10 @@
 }
 body{
     background-image: url("../public/images/collage-like.jpg");
+    background-color: rgb(5, 5, 80);
     background-size: cover;
     background-attachment: fixed;
+    background-position: center;
     background-repeat: no-repeat;
-    min-height: 100%;
+    height: 100%;
 }
